<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.haya</groupId>
    <artifactId>java-mate-core</artifactId>
    <version>1.0-SNAPSHOT</version>


    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- versions -->
        <version.junit>4.12</version.junit>
        <version.memcompiler>1.3.0</version.memcompiler>
        <version.spoon>10.1.1</version.spoon>
        <!-- plugin versions -->
        <pVersion.compiler>3.8.0</pVersion.compiler>
        <pVersion.surefire>2.22.1</pVersion.surefire>
    </properties>

    <dependencies>

<!--        <dependency>-->
<!--            <groupId>junit</groupId>-->
<!--            <artifactId>junit</artifactId>-->
<!--            <version>${version.junit}</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>2.0.1</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.google.auto.service</groupId>-->
<!--            <artifactId>auto-service</artifactId>-->
<!--            <version>1.0.1</version>-->
<!--        </dependency>-->


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${pVersion.compiler}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <verbose>true</verbose>
                    <compilerArgs>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.model=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.processing=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.code=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.tree=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.util=java.mate</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.api=java.mate</arg>
                    </compilerArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <compilerArgument>-proc:none</compilerArgument>
                            <includes>
                                <!-- 自定义的注解处理器全限定名-->
                                <include>com.haya.mate.core.annotation.ToString</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-project</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>